--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
   <title>CSS Grid Code Along</title>
 </head>
 <body>
+  <header> Header XXX</header>
   <div class="grid-container">
     <div class="grid-item">1</div>
     <div class="grid-item">2</div>
-    <div class="grid-item">3</div>
+    <div class="grid-item bigItem">3.BIG ITEM</div>  
     <div class="grid-item">4</div>
     <div class="grid-item">5</div>
     <div class="grid-item">6</div>
@@ -22,5 +23,7 @@
     <div class="grid-item">11</div>
     <div class="grid-item">12</div>
   </div>
+
+<footer>This is footer</footer>
 </body>
 </html>
